service.yaml
apiVersion: v1
kind: Service

metadata:
  name: myapp-service

spec:
  selector:
    app: myapp

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000

  type: NodePort
